# opensaft

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/workflows/: rust-ci.yml
benches/: benchmark.rs
crates/opensaft-sdf/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/opensaft-sdf/src/: interpreter.glsl  interpreter.rs  lib.rs  opcodes.rs
crates/saft-sdf/: CHANGELOG.md  Cargo.toml  README.md
crates/saft-sdf/src/: interpreter.rs  sdf.glsl  sdf.rs  structs.rs
src/: codegen.rs  compiler.rs  graph.rs  grid3.rs  lib.rs  marching_cubes.rs  math.rs  mesh.rs  program.rs  sphere_tracing.rs  trace.rs
src/math/: bounding_box.rs  conformal.rs  iso_transform.rs  plane3.rs  ray3.rs
